<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- edit text to enter amount -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_total_amount_to_split"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtAMount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- edit text to enter number of person to split amount -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPerson"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_number_of_people_to_split"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtPeople"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- button to get the amount for individual -->
    <Button
        android:id="@+id/idBtnGetAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:text="@string/get_amount"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <!-- button to reset -->
    <Button
        android:id="@+id/idBtnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <!-- text view to display amount for individual -->
    <TextView
        android:id="@+id/idTVIndividualAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:text="@string/individual_amount"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textColorHighlight="?android:attr/textColorHighlight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:text="Individual Amount : 0.00" />
    <Button
        android:id="@+id/idBtnShare3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Share Result" />
</LinearLayout>